fix: add max-height property to collapse

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -1,3 +1,4 @@
+@use '../../assets/scrollbar' as *;
 @use '../../assets/fonts' as *;
 
 .vt-collapse {
@@ -60,6 +61,7 @@
     }
 
     &__content {
+      @include vt-scrollbar;
       padding: var(--vt-padding-lg);
     }
   }
